--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,8 @@ repositories {
 
 
 dependencies {
-	//compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	//runtime('com.h2database:h2')
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')	
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.4.RELEASE'	
+	runtime('com.h2database:h2')
 	testCompile('org.springframework.boot:spring-boot-starter-test')	 
 }
